<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbackground"
    tools:context=".ui.fragments.addNoteWindow.AddNoteFrag"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/editTextTitleOfNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:hint="@string/title"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="24sp"
        android:background="@drawable/multi_line_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextOfNote"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:backgroundTint="@color/white"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:textCursorDrawable="@drawable/cursor"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:text="@string/dear_diary"
        android:textIsSelectable="false"
        android:background="@drawable/multi_line_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitleOfNote" />




    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        tools:text="25.12.2001"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextOfNote" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        tools:text="16:20"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextOfNote" />

    <Button
        android:id="@+id/buttonSaveMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/saveInfo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="#FAAACA"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnBackAdd"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/go_back"
        android:src="@drawable/back_symb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>