<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbackground"
    tools:context=".ui.fragments.noteWindow.NoteFrag"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Enter Title Here" />

    <EditText
        android:id="@+id/DiaryNote"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:ems="10"
        android:text="Type here.."
        android:fontFamily="casual"
        android:textSize="20dp"
        android:gravity="start|top"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:fontFamily="casual"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DiaryNote"
        tools:text="25.12.2001" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:fontFamily="casual"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DiaryNote"
        tools:text="16:20" />




    <ImageView
        android:id="@+id/DeleteButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/delete"
        android:layout_marginEnd="16dp"
        android:src="@drawable/delete_sym"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


<!--the back button the go to the update mood page-->
    <ImageView
        android:id="@+id/BackButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_symb"
        android:contentDescription="@string/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnSaveDiaryEntry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:text="@string/saveInfo"
        android:fontFamily="casual"
        android:textColor="@color/white"
        app:backgroundTint="#FAAACA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/multi_line_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DiaryNote" />




</androidx.constraintlayout.widget.ConstraintLayout>