<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.selectMoodWindow.SelectMoodFrag"
    android:layout_width="match_parent"
    android:background="@drawable/screenbackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ChooseYourMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Please select your mood"
        android:textColor="#18FFFF"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/ChooseYourActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Please select your activity"
        android:textColor="#18FFFF"
        android:textSize="34sp"

        app:layout_constraintBottom_toTopOf="@+id/textAbFeelings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/MoodPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:paddingLeft="10dp"
        android:text="@string/notes_on_mood"
        android:textColor="#18FFFF"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />


    <RadioGroup
        android:id="@+id/Radio_group_emotions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098">

        <RadioButton
            android:id="@+id/HappyButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_happy"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/AngryButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_angry"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/StressedButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_stressed"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/ContentButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_content"
            android:button="@android:color/transparent"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/GlumButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_glum"
            android:button="@android:color/transparent"
            android:gravity="center" />


        <RadioButton
            android:id="@+id/SadButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_sad"
            android:button="@android:color/transparent"
            android:gravity="center" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/Radio_group_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327">


        <RadioButton
            android:id="@+id/RelaxButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_relax"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/StudyButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_study"
            android:button="@android:color/transparent"
            android:gravity="center" />


        <RadioButton
            android:id="@+id/SportButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_sport"
            android:button="@android:color/transparent"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/GamedButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_gamed"
            android:button="@android:color/transparent"
            android:gravity="center" />


        <RadioButton
            android:id="@+id/SocialButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/r_social"
            android:button="@android:color/transparent"
            android:gravity="center" />

    </RadioGroup>

    <EditText
        android:id="@+id/textAbFeelings"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/multi_line_text"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/start_typing"
        android:inputType="textMultiLine"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingLeft="10dp"
        android:singleLine="false"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveMood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodPrompt"
        app:layout_constraintVertical_bias="0.214" />


    <Button
        android:id="@+id/buttonSaveMood"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingLeft="30dp"
        android:paddingTop="1dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/saveInfo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="#FAAACA"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodPrompt"
        app:layout_constraintVertical_bias="0.882" />


</androidx.constraintlayout.widget.ConstraintLayout>